--- a/prob1_2025/bayes.html
+++ b/prob1_2025/bayes.html
@@ -149,7 +149,7 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
-<h3/>
+<h3>Conditional Probability</h3>
 <ul>
 <li>
 <a href="#Conditional Probability">Conditional Probability</a>
@@ -195,8 +195,9 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
+<title xmlns="">Conditional Probability</title>
 $\newcommand{\ev}{{\mathcal F}}$
-<h1 xmlns=""><a
+<h1><a
 name="Conditional Probability">Conditional Probability</a></h1>
 
 <p></p>
