--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -149,7 +149,7 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
-<h3/>
+<h3>Conditional distribution</h3>
 <ul>
 <li>
 <a href="#Conditional distribution">Conditional distribution</a>
@@ -168,8 +168,9 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
+<title xmlns="">Conditional distribution</title>
 
-<h1 xmlns=""><a
+<h1><a
 name="Conditional distribution">Conditional distribution</a></h1>
 
 <fieldset>
