--- a/prob1_2025/distrib1.html
+++ b/prob1_2025/distrib1.html
@@ -149,10 +149,10 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
-<h3/>
+<h3>Finite support discrete distributions</h3>
 <ul>
 <li>
-<a href="#Standard discrete distributions ">Standard discrete distributions </a>
+<a href="#Standard discrete distributions">Standard discrete distributions</a>
 </li>
 <li>
 <a href="#Finite sample space">Finite sample space</a>
@@ -177,9 +177,10 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
+<title xmlns="">Finite support discrete distributions</title>
 
-<h1 xmlns=""><a
-name="Standard discrete distributions ">Standard discrete distributions </a></h1>
+<h1><a
+name="Standard discrete distributions">Standard discrete distributions</a></h1>
 
 <h1><a
 name="Finite sample space">Finite sample space</a></h1>
