--- a/prob1_2025/distrib2.html
+++ b/prob1_2025/distrib2.html
@@ -149,7 +149,7 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
-<h3/>
+<h3>Infinite support discrete distributions</h3>
 <ul>
 <li>
 <a href="#Infinite sample space">Infinite sample space</a>
@@ -177,8 +177,9 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
+<title xmlns="">Infinite support discrete distributions</title>
 
-<h1 xmlns=""><a
+<h1><a
 name="Infinite sample space">Infinite sample space</a></h1>
 
 <h2><a
