--- a/prob1_2025/elem.html
+++ b/prob1_2025/elem.html
@@ -149,12 +149,13 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
-<h3/>
+<h3>Elementary concepts</h3>
 <ul/>
 <hr/>
+<title xmlns="">Elementary concepts</title>
 
 
-<h1 xmlns=""><a
+<h1><a
 name="Elementary concepts">Elementary concepts</a></h1>
 Toss a coin. You can't be sure whether it will come up head first
 or tail first. Wait, is that true? After all, the coin is
