--- a/prob1_2025/fluc.html
+++ b/prob1_2025/fluc.html
@@ -149,7 +149,7 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
-<h3/>
+<h3>Random walks</h3>
 <ul>
 <li>
 <a href="#Random walks">Random walks</a>
@@ -186,8 +186,9 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
+<title xmlns="">Random walks</title>
 
-<h1 xmlns=""><a
+<h1><a
 name="Random walks">Random walks</a></h1>
 The material here is taken from chapter 3 of Feller, Volume
 1.
