--- a/prob1_2025/indep.html
+++ b/prob1_2025/indep.html
@@ -149,7 +149,7 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
-<h3/>
+<h3>Independence</h3>
 <ul>
 <li>
 <a href="#Independence">Independence</a>
@@ -171,8 +171,9 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
+<title xmlns="">Independence</title>
 
-<h1 xmlns=""><a
+<h1><a
 name="Independence">Independence</a></h1>
 
 <h2><a
