--- a/prob1_2025/joint.html
+++ b/prob1_2025/joint.html
@@ -149,7 +149,7 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
-<h3/>
+<h3>Joint distribution</h3>
 <ul>
 <li>
 <a href="#Joint distribution">Joint distribution</a>
@@ -174,8 +174,9 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
+<title xmlns="">Joint distribution</title>
 
-<h1 xmlns=""><a
+<h1><a
 name="Joint distribution">Joint distribution</a></h1>
 
 <p></p>
