--- a/prob1_2025/mom.html
+++ b/prob1_2025/mom.html
@@ -149,7 +149,7 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
-<h3/>
+<h3>Variance</h3>
 <ul>
 <li>
 <a href="#Variance">Variance</a>
@@ -165,8 +165,9 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
+<title xmlns="">Variance</title>
 
-<p xmlns=""></p>
+<p></p>
 
 <h1><a
 name="Variance">Variance</a></h1>
