--- a/prob1_2025/pgf.html
+++ b/prob1_2025/pgf.html
@@ -150,7 +150,7 @@ function myFunction() {
 rel="stylesheet" href="branch.css"></link></head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
-<h3/>
+<h3>Probability Generating Function</h3>
 <ul>
 <li>
 <a href="#Probability Generating Function (PGF)">Probability Generating Function (PGF)</a>
@@ -178,9 +178,10 @@ rel="stylesheet" href="branch.css"></link></head><body>
 </li>
 </ul>
 <hr/>
+<title xmlns="">Probability Generating Function</title>
 
 
-<h1 xmlns=""><a
+<h1><a
 name="Probability Generating Function (PGF)">Probability Generating Function (PGF)</a></h1>
 
 <fieldset>
