--- a/prob1_2025/rv.html
+++ b/prob1_2025/rv.html
@@ -149,7 +149,7 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
-<h3/>
+<h3>Random variables</h3>
 <ul>
 <li>
 <a href="#Random variables">Random variables</a>
@@ -183,8 +183,9 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
+<title xmlns="">Random variables</title>
 $\newcommand{\pow}{{\mathcal P}}$
-<h1 xmlns=""><a
+<h1><a
 name="Random variables">Random variables</a></h1>
 
 <h2><a
