--- a/prob1_2025/exp.html
+++ b/prob1_2025/exp.html
@@ -160,6 +160,9 @@ function myFunction() {
 <li>
 <a href="#Random variables taking countably many values">Random variables taking countably many values</a>
 </li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#A couple of warnings">A couple of warnings</a>
+</li>
 <li>
 <a href="#Properties of expectation">Properties of expectation</a>
 </li>
@@ -362,6 +365,28 @@ It is possible to define expectation of random variables that are more general (
 Unless noted otherwise, we
  shall only prove them for the case of simple random variables. These proofs are actually the first steps in the general proofs
  that will come next semester. 
+<p></p>
+
+<h2><a
+name="A couple of warnings">A couple of warnings</a></h2>
+
+<img src="image/alert.png">Many students somehow get the idea that if a (discrete) random variable $X$  takes
+ the values $x_1,x_2,..$. with probabilities $p_1,p_2,...$ where $\sum p_i = 1$,
+ then $E(X) = \sum_i x_i p_i$. <b>But this is wrong! It is wrong even if the sum converges!</b> 
+This formula is true in the following special cases:
+<ol type="">
+<li>If $X$  is simple, <i>i.e.</i>, takes only finitely many values.</li>
+
+<li>If $X$  takes only nonnegative (or only nonpositive) values (and here the formula holds even if the sum
+diverges).</li>
+
+<li>If $\sum_i |x_i| p_i &lt; \infty$.</li>
+
+</ol> 
+
+<p></p>
+Here is another point that students sometimes get wrong. When we say $E(X)$  is <b>undefined</b>  we mean $E(X)$ 
+ is meaningless in that context, and <i>not</i> that $E(X)$  can be anything there. 
 <p></p>
 
 <h1><a
@@ -605,7 +630,7 @@ techniques will always give the same answer.
 <p></p>
 
 <fieldset>
-<legend><b><i>Theorem</i></b></legend>
+<legend><b><i>Law of the lazy statistician</i></b></legend>
 Let a (discrete) random variable $X$ take
 values $x_1,x_2,...$ with
 probabilities $p_1,p_2,...$. Let $h(\cdot)$ be any
