--- a/prob1_2025/mom.html
+++ b/prob1_2025/mom.html
@@ -234,31 +234,30 @@ $$
 <b><i>Proof:</i></b>
 Take any $\epsilon&gt;0.$
 <p></p>
-Let $E(X)$ be denoted by $\mu.$
-<p></p>
 Define 
 $$
-f(x) = \left\{\begin{array}{ll}
-\epsilon^2 &\text{if }|x-\mu|\geq \epsilon\\
+Y = \left\{\begin{array}{ll}
+\epsilon^2 &\text{if }|X-E(X)|\geq \epsilon\\
 0 &\text{otherwise.}
 \end{array}\right.
 $$
 <p></p>
-Then $\forall x~~f(x)\leq (x-\mu)^2.$
-<p></p>
-
+Then $(X-E(X))^2\geq Y.$
 <p></p>
 So
 $$\begin{eqnarray*}
 V(X) 
-&amp; = &amp; E(X-\mu)^2\\
-&amp; \geq &amp; E(f(X))\\
-&amp; = &amp; \epsilon^2 P(|X_i-\mu| \geq\epsilon) + 0\times P(|X_i-\mu| &lt;\epsilon).
+&amp; = &amp; E(X-E(X))^2\\
+&amp; \geq &amp; E(Y)\\
+&amp; = &amp; \epsilon^2 P(|X_i-E(X)| \geq\epsilon) + 0\times P(|X_i-E(X)| &lt;\epsilon).
 \end{eqnarray*}$$
 Hence the result.
 <b><i>[QED]</i></b>
 </p>
-
+A point about the inequalities in the above theorem. There are two inequalities, one inside the probability, and one outside.
+ Both are mixed inequalities. Obviously, you may make the first inequality strict (thereby
+ weakening the result). However, you may  not replace the other inequality with a strict one, because otherwise you will
+ get $0 &lt; 0$  for a degenerate $X$.
 <p></p>
 
 <h1><a
@@ -293,7 +292,7 @@ $$
 m_X(t) =  E(e^{tX}).
 $$
 The domain of this function conists of all $t\in{\mathbb R}$ for
-which the expectation exists.
+which the expectation exists <i>finitely</i>.
 </fieldset>
 
 <p></p>
@@ -412,8 +411,8 @@ Too difficult for this course.
 
 <p></p>
 
-<b>We shall not spend proving any result on MGF here. We shall
-learn the proofs for CFs in the next semester.</b>
+<b>We shall not spend time proving any result on MGF here. You will
+learn the proofs for CFs in the third semester.</b>
 
 <p></p>
 
