--- a/prob1_2025/joint.html
+++ b/prob1_2025/joint.html
@@ -285,14 +285,27 @@ $$
 F(a,b) = P(X\leq a~\&amp;~1\leq b) = \left\{\begin{array}{ll}0&\text{if }b &lt;
 1\\F(a)&\text{if }b\geq 1.\\\end{array}\right.
 $$
+Its plot as a surface looks like this:
+<center>
+<table width="100%">
+<tr>
+<th><img width="700" src="image/bivcdf.png"></th>
+</tr>
+<tr>
+<th>Notice the discontinuity</th>
+</tr>
+</table>
+</center>
+We can see that it is discontinuous because if you imagine the surface as a handkerchief, then clearly there is a slit halfway
+ through. 
+<p></p>
+More mathematically, we can take a sequence $( (a_n, b_n) )\rightarrow (a,b)$  and show that $F(a_n,b_n)\not\rightarrow F(a,b)$.
+ We just have to place $(a,b)$  on the slit, and make the sequence approach it from a suitable direction.
+<p></p>
 If we take $(a_n,b_n) =\left( \frac 12, 1-\frac 1n\right),$
 then $(a_n,b_n)\rightarrow \left(\frac 12,1\right).$ 
 <p></p>
-
-<p></p>
 Now $F(a_n,b_n)\equiv 0,$ and so $F(a_n,b_n)\rightarrow 0.$
-<p></p>
-
 <p></p>
 But $F\left(\frac 12,1\right) = \frac 12\neq 0.$
  ■
