--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,8 @@
 <html><body>
 <dl>
+<dt><strong>September 19, 2025:</strong></dt>
+<dd><p>Added a picture to the <a href="joint.html" target="naya">Joint distribution</a> page.</p>
+</dd>
 <dt><strong>September 17, 2025:</strong></dt>
 <dd><ul>
 <li><p>Added a couple of warnings to the<br />
