--- a/prob1_2025/joint.html
+++ b/prob1_2025/joint.html
@@ -697,7 +697,7 @@ Use the exercise above and Chebyshev inequality.
 <p></p>
 
 <fieldset>
-<legend><b><i>Cauchy-Scwartz inequality</i></b></legend>
+<legend><b><i>Cauchy-Schwarz inequality</i></b></legend>
 $cov(X,Y)^2 \leq V(X)V(Y).$
 Equality holds iff $\exists a,b,c\in{\mathbb R}~~P(aX+bY=c)=1.$
 </fieldset>
@@ -743,7 +743,7 @@ $$
 \rho(X,Y)= \frac{ cov(X,Y) }{ \sqrt{V(X)V(Y)} }.
 $$
 </fieldset>
-By  Cauchy-Scwartz inequality, $rho(X,Y) \in [-1,1].$ Also,
+By  Cauchy-Schwarz inequality, $rho(X,Y) \in [-1,1].$ Also,
 $\rho(X,Y)=-1$ or $\rho(X,Y)=1$ if and only
 if $X,Y$ are linearly linearly related with probability 1,
 <i>i.e.</i>, $\exists a,b,c\in{\mathbb R}$ such that $P(aX+bY=c)=1.$
