--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,8 @@
 <html><body>
 <dl>
+<dt><strong>September 24, 2025:</strong></dt>
+<dd><p>Corrected a typo in the hint of Exercise 21 in the <a href="joint.html" target="naya">Joint distribution</a> page.</p>
+</dd>
 <dt><strong>September 19, 2025:</strong></dt>
 <dd><p>Added a picture to the <a href="joint.html" target="naya">Joint distribution</a> page.</p>
 </dd>
