--- a/prob1_2025/joint.html
+++ b/prob1_2025/joint.html
@@ -1258,7 +1258,7 @@ href="javascript:hideShow('lab21')"><b>[Hint]</b></a><div
 class="ans" id="lab21">
 Let $X=$ number of defective bolts in a random shipment. 
 <p></p>
-We want to choose $a$  such that $P(X&gt; a) &lt; 0.05.$
+We want to choose $a$  such that $P(X&gt; a) &lt; 0.01.$
 <p></p>
 Here $X$  can take values 0,1,2,...,10000 with the probabilities
 $$P(X=k) = \binom{10000}{k} 0.05^k 0.95^{10000-k}=p_k,\mbox{ say.}$$
@@ -1270,6 +1270,8 @@ Finding this $a$  is not easy by hand, though trivial using a computer.
 <p></p>
 There is a theorem called the
  Central Limit Theorem which allows a simple approximate way to find $a.$  We shall learn it in the next semester.
+<p></p>
+[Thanks to Samyak for correcting a typo here.]
 </div></p>
 
 </p>
