--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,8 @@
 <html><body>
 <dl>
+<dt><strong>Sepetember 27, 2025:</strong></dt>
+<dd><p>Corrected a serious typo in the two important exercises added yesterday in the <a href="condl.html" target="naya">Conditional distribution</a> page.</p>
+</dd>
 <dt><strong>Sepetember 26, 2025:</strong></dt>
 <dd><p>Added two important exercises in the <a href="condl.html" target="naya">Conditional distribution</a> page.</p>
 </dd>
