--- a/prob1_2025/fluc.html
+++ b/prob1_2025/fluc.html
@@ -252,8 +252,7 @@ of up's and down's. So the number is $\binom{10}{5}.$
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 1:</b>&nbsp;Find the probability that the drunkard ends up at any given
 $k\in{\mathbb Z}$ in exactly $n$ steps.</p>
 
@@ -355,8 +354,7 @@ $
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 2:</b>&nbsp;
 Find the numerical value of the probability you found in the
 above example for $n=5.$ Check it by running the following
@@ -418,7 +416,7 @@ Let
  $\alpha'$ be the reflection
 of $\alpha$ along $L.$ Thus here, $\alpha' = (2,4).$  
 Then the required number 
-the same as $|PATH(\alpha',\beta).$
+the same as $|PATH(\alpha',\beta)|.$
 <p></p>
 
 <fieldset>
@@ -798,8 +796,7 @@ equals the number of $2n$-length paths ending at 0. Could you prove it directly 
 
 <h2><a
 name="Problems for practice">Problems for practice</a></h2>
-
-<p>
+::<p>
 <b>EXERCISE 3:</b>&nbsp;Prove the following theorem:
 <fieldset>
 <legend><b><i>First 0-return theorem</i></b></legend>
@@ -837,8 +834,7 @@ Hence the result.
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 4:</b>&nbsp;
 Consider all paths of length $2n$ starting at $(0,0).$
 What is the number of these paths that return to $0$
@@ -847,8 +843,7 @@ return to 0 from the positive side?
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 5:</b>&nbsp;Prove the following theorem:
 <fieldset>
 <legend><b><i>Last 0-return theorem</i></b></legend>
@@ -880,8 +875,7 @@ independently of that, we can choose the part after the red dot
 in $N_{2n-2k,0}$ ways, by the <b>no 0-return theorem</b>. Hence the result.
 </div></p>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 6:</b>&nbsp;
 (Ballot problem) two candidates are contesting in
 a vote. There are $n$ voters who have cast their votes. The
@@ -924,8 +918,7 @@ So the required probability is $\frac{p-q}{p+q},$ as required.
 </div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 7:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -944,8 +937,7 @@ class="ans" id="lab4">This is just the complement of the last problem. So the an
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 8:</b>&nbsp;Let $a,b&gt;0.$ Show that the number of paths from $(0,0)$ to $(n,a)$ that are
 always $&gt;-b$ is $N_{n,a}-N_{n,a+2b}.$ <p><a
 href="javascript:hideShow('lab5')"><b>[Hint]</b></a><div
@@ -959,8 +951,7 @@ class="ans" id="lab5">
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 9:</b>&nbsp;Let $b&gt; a&gt; 0.$ Show that the number of paths
 from $(0,0)$ to $(n,a)$ that are
 always $&lt;b$ is $N_{n,a}-N_{n,2b-a}.$
@@ -974,8 +965,7 @@ class="ans" id="lab6">
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 10:</b>&nbsp;Show that if $a&gt; c&gt; 0$  and $b&gt;0$, then  the number of paths from (0,0) to $(n,c)$
   that attain height $a$  and <i>then</i>  attain height $-b$  before finishing at $(n,c),$  is $N_{n,2a+2b+c}.$ 
  The paths may have also attained height $-b$  before attaining height  $a.$
@@ -994,8 +984,7 @@ class="ans" id="lab7">
 </center>
 </div></p> 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 11:</b>&nbsp;Let $a&gt;c&gt;0$ and $b&gt;0.$ Show that the number of
 paths from $(0,0)$ which hit the
 horizontal line at height $a$ and then lead to $(n,c)$
@@ -1025,8 +1014,7 @@ Hence the result.
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 12:</b>&nbsp;Prove that there are as many paths from (0,0)
 to $(2n+2,0)$ with all interior vertices $&gt;0$ as there
 are paths from (0,0) to $(2n,0)$ where all interior
@@ -1049,8 +1037,7 @@ to $(2n,0)$ with all interior vertices $\geq 0$}.
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 13:</b>&nbsp;True or false: The probability that before time $2n$ there occur
 exactly $r$ returns to the origin equals the probability
 that a return occurs at time $2n$  preceded by at
@@ -1063,8 +1050,7 @@ class="ans" id="lab10">False. Consider $r=1$  and $n=2.$  Then the first probabi
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 14:</b>&nbsp;Consider random paths of length $2n$ starting
 from $(0,0).$ Let $k\in\{1,...,n\}.$ Consider the two events:
 <blockquote>
@@ -1085,8 +1071,7 @@ For $k\in\{1,...,n\},$  the result follows directly from reflection principle. T
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 15:</b>&nbsp;Find the fallacy in the following argument:
 Consider the set of all paths of length 10 starting
 from $(0,0).$
@@ -1111,8 +1096,7 @@ class="ans" id="lab12">The "$|B|\leq |A|$ " argument is wrong. What it says is: 
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 16:</b>&nbsp;<center>
 <table width="100%">
 <tr>
