--- a/prob1_2025/joint.html
+++ b/prob1_2025/joint.html
@@ -1078,7 +1078,9 @@ Also $cov(X_1-X_2,X_2+X_3) = cov(X_1,X_2)+\cov(X_1,X_3)-cov(X_2,X_2)-cov(X_2,X_3
 <p><a
 href="javascript:hideShow('lab15')"><b>[Hint]</b></a><div
 class="ans" id="lab15">
-$V(X-2Y) = V(X)+4V(Y)-4cov(X,Y) = 1+8+4\times \frac 12\times \sqrt{1\times 2}.$
+$V(X-2Y) = V(X)+4V(Y)-4cov(X,Y) = 1+8-4\times \frac 12\times \sqrt{1\times 2}.$
+<p></p>
+[Thanks to Mayukh for correcting typo here.]
 </div></p>
 
 </p>
